@@ -1,7 +1,9 @@
 package ar.edu.utn.frba.dds.domain.fuentes;
 
+
 import ar.edu.utn.frba.dds.domain.hecho.Hecho;
 import ar.edu.utn.frba.dds.domain.serializadores.Serializador;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -38,7 +40,7 @@ public abstract class FuenteDeCopiaLocal implements Fuente {
 
   @Override
   public List<Hecho> obtenerHechos() {
-    return List.copyOf(this.cacheDeHechos);
+    return Collections.unmodifiableList(this.cacheDeHechos);
   }
 
   /**
